--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "rheostat": "^3.0.1",
+    "serve": "^13.0.2",
     "simple-react-validator": "^1.5.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^3.1.0",
