--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "dev": "PORT=3006 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired --env=jsdom",
-    "heroku-postbuild": "npm install --dev"
+    "heroku-postbuild": "react-app-rewired build"
   },
   "devDependencies": {
     "http-proxy-middleware": "^1.0.5"
